Suppressed false positive CVE-2018-8088 for slf4j-api

--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,9 @@
                 </executions>
                 <configuration>
                     <failBuildOnAnyVulnerability>true</failBuildOnAnyVulnerability>
+                    <suppressionFiles>
+                        <suppressionFile>cve-suppressions.xml</suppressionFile>
+                    </suppressionFiles>
                 </configuration>
             </plugin>
             <plugin>
